@@ -15,7 +15,7 @@ pyramid.includes =
     pyramid_debugtoolbar
 
 sqlalchemy.url = sqlite:///%(here)s/ssl_minnow.sqlite
-sqlalchemy_logger.url = sqlite:///%(here)s/ssl_minnow.sqlite
+sqlalchemy_logger.url = sqlite:///%(here)s/ssl_minnow_log.sqlite
 
 # By default, the toolbar only appears for clients from IP addresses
 # '127.0.0.1' and '::1'.
@@ -36,10 +36,14 @@ requests.disable_ssl_warning = True
 enable_acme_flow = True
 
 # defaults to testing. you probably want the main system. this library is v1 only.
-certificate_authority = letsencrypt-v1-staging
+# certificate_authority = letsencrypt-v1-staging
 # set the certificate_authority to `custom` so the next line will work for development tests
-# certificate_authority_testing = True
 certificate_authority_agreement = None # 'https://letsencrypt.org/documents/LE-SA-v1.0.1-July-27-2015.pdf'
+
+certificate_authority = custom
+certificate_authority_testing = True
+certificate_authority_endpoint = http://127.0.0.1:7202
+certificate_authority_protocol = acme-v1
 
 enable_redis = True
 redis.url =  redis://127.0.0.1:6379/9
