@@ -49,7 +49,22 @@ documentation_grid = {
                               'default': '`/etc/ssl/openssl.cnf`',
                               'default-notes': 'The default is set in `lib.cert_utils`.',
                               'show_on_settings': True,
-                              }
+                              },
+        'queue_domains_max_per_cert': {'docstring': 'Max domains per cert when dealing with the que-domains',
+                                       'default': '`100`',
+                                       'default-notes': 'LetsEncrypt has a max of 100.',
+                                       'show_on_settings': True,
+                                       },
+        'queue_domains_min_per_cert': {'docstring': 'Min domains per cert when dealing with the queue-domains',
+                                       'default': '`1`',
+                                       'default-notes': '',
+                                       'show_on_settings': True,
+                                       },
+        'queue_domains_use_weekly_key': {'docstring': 'If True, will use a weekly autogenerated key for this queue. otherwise, will use the default key.',
+                                         'default': '`False`',
+                                         'default-notes': '',
+                                         'show_on_settings': True,
+                                         },
     },
     'NGINX Configuration': {
         '.section_requires': 'enable_nginx',
