@@ -109,26 +109,63 @@ def queue_domains__add(ctx, domain_names):
 # - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
 
 
+def _get_default_AccountKey(ctx):
+    # raises an error if we fail
+    dbAccountKeyDefault = lib.db.get.get__SslAcmeAccountKey__default(ctx, active_only=True)
+    if not dbAccountKeyDefault:
+        raise ValueError("Could not load a default AccountKey.")
+    return dbAccountKeyDefault
+    
+
+def _get_default_PrivateKey(ctx):
+    # raises an error if we fail
+    # which private-key should we use?
+    use_weekly_key = ctx.request.registry.settings['queue_domains_use_weekly_key']
+    if use_weekly_key:
+        dbPrivateKey = lib.db.get.get__SslPrivateKey__current_week(ctx)
+        if not dbPrivateKey:
+            dbPrivateKey = lib.db.create.create__SslPrivateKey__autogenerated(ctx)
+    else:
+        dbPrivateKey = lib.db.get.get__SslPrivateKey__default(ctx, active_only=True)
+    if not dbPrivateKey:
+        raise errors.DisplayableError("Could not load a default PrivateKey")
+    return dbPrivateKey
+
+# - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
+
+
 def queue_domains__process(
     ctx,
     dbAccountKey=None,
     dbPrivateKey=None,
 ):
-    raise errors.OperationsContextError("Not Finished Yet")
     """
     This endpoint should pull `1-100[configurable]` domains from the queue, and create a certificate for them
 
     * if there are more than 100, should we process them, or return that info in json?
 
     """
+    if dbAccountKey is None:
+        # raises an error if we fail
+        dbAccountKey = _get_default_AccountKey(ctx)
+
+    if dbPrivateKey is None:
+        # raises an error if we fail
+        dbPrivateKey = _get_default_PrivateKey(ctx)
 
     try:
+        min_domains = ctx.request.registry.settings['queue_domains_min_per_cert']
+        max_domains = ctx.request.registry.settings['queue_domains_max_per_cert']
+
         items_paged = lib.db.get.get__SslQueueDomain__paginated(
             ctx,
-            show_processed=False,
-            limit=100,
+            unprocessed_only=True,
+            limit=max_domains,
             offset=0
         )
+        if len(items_paged) < min_domains:
+            raise errors.DisplayableError("Not enough domains to issue. Only found `%s`, need `%s`." % (len(items_paged), min_domains))
+            
         event_payload_dict = utils.new_event_payload_dict()
         event_payload_dict['batch_size'] = len(items_paged)
         event_payload_dict['status'] = 'attempt'
@@ -171,25 +208,15 @@ def queue_domains__process(
         # create a dbUniqueFqdnSet for this.
         # TODO - should we delete this if we fail? or keep for the CSR record
         #      - rationale is that on another pass, we would have a different fqdn set
-        dbUniqueFqdnSet, is_created = lib.db.getcreate.getcreate__SslUniqueFQDNSet__by_domainObjects(ctx, domainObjects)
+        (dbUniqueFqdnSet,
+         _is_created,
+         ) = lib.db.getcreate.getcreate__SslUniqueFQDNSet__by_domainObjects(ctx, domainObjects)
 
         # update the event
         event_payload_dict['ssl_unique_fqdn_set_id'] = dbUniqueFqdnSet.id
         dbOperationsEvent.set_event_payload(event_payload_dict)
         ctx.dbSession.flush(objects=[dbOperationsEvent, ])
         transaction.commit()
-
-        if dbAccountKey is None:
-            dbAccountKey = lib.db.get.get__SslAcmeAccountKey__default(ctx)
-            if not dbAccountKey:
-                raise ValueError("Could not grab an AccountKey")
-
-        if dbPrivateKey is None:
-            dbPrivateKey = lib.db.get.get__SslPrivateKey__current_week(ctx)
-            if not dbPrivateKey:
-                dbPrivateKey = lib.db.create.create__SslPrivateKey__autogenerated(ctx)
-            if not dbPrivateKey:
-                raise ValueError("Could not grab a PrivateKey")
 
         # do commit, just because we may have created a private key
         transaction.commit()
@@ -321,16 +348,27 @@ def queue_renewals__process(ctx):
     if items_count:
         items_paged = lib.db.get.get__SslQueueRenewal__paginated(ctx, unprocessed_only=True, limit=1, offset=0, eagerload_renewal=True)
 
-        _need_default_key = False
+        dbAccountKeyDefault = None
+        _need_default_AccountKey = False
         for dbQueueRenewal in items_paged:
-            if (not dbQueueRenewal.server_certificate.ssl_acme_account_key_id) or (not dbQueueRenewal.server_certificate.ssl_acme_account_key.is_active):
-                _need_default_key = True
+            if (not dbQueueRenewal.server_certificate) or (not dbQueueRenewal.server_certificate.ssl_acme_account_key_id) or (not dbQueueRenewal.server_certificate.ssl_acme_account_key.is_active):
+                _need_default_AccountKey = True
                 break
 
-        if _need_default_key:
-            dbAccountKeyDefault = lib.db.get.get__SslAcmeAccountKey__default(ctx, active_only=True)
-            if not dbAccountKeyDefault:
-                raise ValueError("Could not load a default AccountKey for renewal")
+        dbPrivateKeyDefault = None
+        _need_default_PrivateKey = False
+        for dbQueueRenewal in items_paged:
+            if (not dbQueueRenewal.server_certificate) or (not dbQueueRenewal.server_certificate.ssl_private_key_id__signed_by) or (not dbQueueRenewal.server_certificate.private_key.is_active):
+                _need_default_PrivateKey = True
+                break
+
+        if _need_default_AccountKey:
+            # raises an error if we fail
+            dbAccountKeyDefault = _get_default_AccountKey(ctx)
+
+        if _need_default_PrivateKey:
+            # raises an error if we fail
+            dbPrivateKeyDefault = _get_default_PrivateKey(ctx)
 
         for dbQueueRenewal in items_paged:
             if dbQueueRenewal not in ctx.dbSession:
@@ -345,13 +383,15 @@ def queue_renewals__process(ctx):
                 dbOperationsEvent = ctx.dbSession.merge(dbOperationsEvent)
 
             dbServerCertificate = None
+            _dbAccountKey = dbQueueRenewal.renewal_AccountKey or dbAccountKeyDefault
+            _dbPrivateKey = dbQueueRenewal.renewal_PrivateKey or dbPrivateKeyDefault
             try:
                 timestamp_attempt = datetime.datetime.utcnow()
                 dbServerCertificate = lib.db.actions.do__CertificateRequest__AcmeAutomated(
                     ctx,
-                    dbQueueRenewal.server_certificate.domains_as_list,
-                    dbAccountKey=dbQueueRenewal.server_certificate.acme_account_key or dbAccountKeyDefault,
-                    dbPrivateKey=dbQueueRenewal.server_certificate.private_key,
+                    dbQueueRenewal.domains_as_list,
+                    dbAccountKey=_dbAccountKey,
+                    dbPrivateKey=_dbPrivateKey,
                     dbServerCertificate__renewal_of=dbQueueRenewal.server_certificate,
                     dbQueueRenewal__of=dbQueueRenewal
                 )
